src/a12/net/directory.h

struct anet_dirsrv_opts {
	struct a12_context_options* a12_cfg;
	volatile bool flag_rescan;
	int basedir;
	struct appl_meta dir;
	size_t dir_count;
	bool allow_tunnel;
	bool discover_beacon;
	bool runner_process;
	char* allow_src;
	char* allow_dir;
	char* allow_appl;
	char* allow_ctrl;
	char* allow_ares;
	char* allow_admin;
	char* allow_monitor;
	char* resource_path;
	int resource_dfd;
	char* appl_server_path; 
	int appl_server_dfd;
	char* appl_server_datapath; 
	int appl_server_datadfd;
	char* appl_logpath;
	char* appl_server_temp_path;
	int appl_server_temp_dfd;
	int appl_logdfd;
};
struct directory_meta;
enum monitor_mode {
	MONITOR_NONE     = 0,
	MONITOR_SIMPLE   = 1,
	MONITOR_DEBUGGER = 2,
	MONITOR_ADMIN    = 3
};
struct anet_dircl_opts {
	int basedir;
	char basedir_path[PATH_MAX];
	char* appl_runner;
	char applname[18];    
	uint16_t applid;
	bool die_on_list;
	bool reload;           
	bool block_state;      
	bool block_log;        
	bool stderr_log;       
	bool keep_appl;        
	bool request_tunnel;   
	int monitor_mode;
	char ident[16]; 
	void (*dir_source)(struct a12_state*, struct a12_dynreq req, void* tag);
	void *dir_source_tag;
	uint16_t source_port;
	struct appl_meta outapp;
	bool outapp_ctrl;
	struct {
		char* name;
		char* path;
		char applname[16];
	} upload;
	struct {
		char* name;
		char* path;
		char applname[16];
	} download;
	void* (*allocator)(struct a12_state*, struct directory_meta*);
	pid_t (*executor)(struct a12_state*,
		struct directory_meta*, const char*, void* tag, int* inf, int* outf);
};
struct directory_meta {
	struct a12_state* S;
	struct anet_dircl_opts* clopt;
	char* secret;
	bool in_transfer;
	uint32_t transfer_id;
	FILE* appl_out;
	bool appl_out_complete;
	int state_in;
	bool state_in_complete;
	arcan_event breq_pending;
	struct arcan_shmif_cont* C;
};
struct dircl;
struct dircl {
	int in_appl; 
	bool in_monitor;
	char identity[16]; 
	int type; 
	bool pending_stream;
	int pending_fd;
	uint16_t pending_id;
	arcan_event petname;
	arcan_event endpoint;
	intptr_t lua_cb;
	uint8_t pubk[32];
	bool authenticated;
	bool in_admin;
	bool dir_link;
	int admin_fdout;
	char message_multipart[1024];
	size_t message_ofs;
	void* userdata;
	struct shmifsrv_client* C;
	struct dircl* next;
	struct dircl* prev;
	struct dircl* tunnel;
};
enum {
	DIRLUA_EVENT_LOST
};
void anet_directory_srv(
	struct a12_context_options*, struct anet_dirsrv_opts, int fdin, int fdout);
struct dircl* anet_directory_shmifsrv_thread(
	struct shmifsrv_client*, struct a12_state*, bool link);
void anet_directory_cl(
	struct a12_state* S, struct anet_dircl_opts opts, int fdin, int fdout);
enum multipart_fail {
	MULTIPART_OOM       = 1,
	MULTIPART_BAD_FMT   = 2,
	MULTIPART_BAD_MSG   = 3,
	MULTIPART_BAD_EVENT = 4
};
enum {
	BREQ_LOAD = false,
	BREQ_STORE = true
};