src/frameserver/util/anet_helper.h


enum a12helper_providers {
	A12HELPER_PROVIDER_BASEDIR = 0
};
struct keystore_provider {
	union {
	struct {
		int dirfd;
		int statefd; 
	} directory;
	};
	int type;
};
struct anet_options {
	const char* cp;
	const char* host;
	const char* port;
	const char* key;
	bool ignore_key_host;
	const char* host_tag;
	const char petname[16];
	int sockfd;
	int mt_mode;
	int mode;
	int allow_n_keys;
	const char* redirect_exit;
	const char* devicehint_cp;
	ssize_t retry_count;
	struct keystore_provider keystore;
	struct a12_context_options* opts;
};
struct anet_cl_connection {
	int fd;
	struct a12_state* state;
	char* errmsg;
	bool auth_failed;
};
struct anet_cl_connection anet_cl_setup(struct anet_options* opts);
struct anet_cl_connection anet_connect_to(struct anet_options* arg);
bool a12helper_keystore_open(struct keystore_provider*);
bool a12helper_keystore_release();
bool a12helper_keystore_hostkey(const char* petname, size_t index,
	uint8_t privk[static 32], char** outhost, uint16_t* outport);
bool a12helper_keystore_tags(bool (*cb)(const char* petname, void*), void* tag);
bool a12helper_keystore_register(
	const char* petname,
	const char* host, uint16_t port, uint8_t pubk[static 32],
	uint8_t* priv
);
const char* a12helper_keystore_accepted(
	const uint8_t pubk[static 32], const char* connp);
bool a12helper_keystore_known_accepted_challenge(
	const uint8_t pubk[static 32],
	const uint8_t chg[static 8],
	bool (*on_beacon)(
		struct arcan_shmif_cont*,
		const uint8_t[static 32],
		const uint8_t[static 8],
		const char*,
		char*
	),
	struct arcan_shmif_cont*, char*
);
struct keystore_mask;
struct keystore_mask {
	char* tag;
	uint8_t pubk[32];
	struct keystore_mask* next;
};
bool a12helper_keystore_public_tagset(struct keystore_mask*);
bool a12helper_keystore_accept(
	const uint8_t pubk[static 32], const char* connp);
void a12helper_keystore_accept_ephemeral(
	const uint8_t pubk[static 32], const char* connp, const char* id);
void a12helper_keystore_flush_ephemeral(const char* id);
int anet_clfd(struct addrinfo* addr);
bool anet_authenticate(struct a12_state* S, int fdin, int fdout, char** err);
int a12helper_keystore_statestore(
	const uint8_t pubk[static 32], const char* name, size_t sz, const char* mode);
int a12helper_keystore_dirfd(const char** err);
bool anet_listen(struct anet_options* args, char** errmsg,
	void (*dispatch)(struct a12_state* S, int fd, void* tag), void* tag);