src/a12/net/a12_helper.h

struct anet_discover_opts;
struct a12helper_opts {
	struct a12_vframe_opts (*eval_vcodec)(
		struct a12_state* S, int segid, struct shmifsrv_vbuffer*, void* tag);
	void* tag;
	size_t vframe_soft_block;
	size_t vframe_block;
 	const char* redirect_exit;
	const char* devicehint_cp;
	int bcache_dir;
	struct frame_cache* cache;
	pthread_mutex_t* lock;
};
struct frame_cache* a12helper_alloc_cache(uint32_t capacity);
void a12helper_framecache_sink(
	struct a12_state* S, struct frame_cache* C, int fd, struct a12helper_opts);
void a12helper_vbuffer_append_raw(
	struct frame_cache*, struct shmifsrv_vbuffer*, uint8_t channel);
void a12helper_vbuffer_append_encoded(
	struct frame_cache*,
	uint8_t* buf, size_t buf_sz, uint8_t channel, bool keyed);
void a12helper_vbuffer_add_listener(
	struct frame_cache*, uintptr_t ref,
		bool raw, void (*trigger)(uintptr_t ref, uint8_t* buf, size_t buf_sz, int type));
void a12helper_vbuffer_drop_listener(struct frame_cache*, uintptr_t ref);
void a12helper_vbuffer_step_quality(
	struct frame_cache* C, uintptr_t ref, ssize_t steps);
void a12helper_a12cl_shmifsrv(struct a12_state* S,
	struct shmifsrv_client* C, int fd_in, int fd_out, struct a12helper_opts);
void
	a12helper_listen_beacon(
		struct arcan_shmif_cont* C,
		struct anet_discover_opts* O,
		bool (*on_beacon)(
			struct arcan_shmif_cont* C,
			const uint8_t kpub[static 32],
			const uint8_t nonce[static 8],
			const char* tag,
			char* addr),
		void (*on_unknown)(char* addr),
		bool (*on_shmif)(struct arcan_shmif_cont* C)
	);
struct keystore_mask*
	a12helper_build_beacon(
		struct keystore_mask* head,
		struct keystore_mask* tail,
		uint8_t** one,
		uint8_t** two, size_t* sz
	);
struct anet_discover_opts {
	int limit; 
	int timesleep; 
	const char* ipv6; 
	bool (*discover_beacon)(
		struct arcan_shmif_cont*,
		const uint8_t kpub[static 32],
		const uint8_t nonce[static 8],
		const char* tag, char* addr
	);
	void (*discover_unknown)(char* addr);
	struct ipcfg* IP; 
	bool (*on_shmif)(struct arcan_shmif_cont* C);
	struct arcan_shmif_cont* C;
};
void anet_discover_listen_beacon(struct anet_discover_opts* cfg);
bool anet_discover_send_beacon(struct anet_discover_opts* cfg);
const char* a12helper_discover_ipcfg(struct anet_discover_opts* cfg, bool beacon);
int a12helper_a12srv_shmifcl(
	struct arcan_shmif_cont* prealloc,
	struct a12_state* S, const char* cp, int fd_in, int fd_out);
uint8_t* a12helper_tob64(const uint8_t* data, size_t inl, size_t* outl);
bool a12helper_fromb64(const uint8_t* instr, size_t lim, uint8_t* outb);