src/a12/net/anet_types.zig


// Extern functions declared in a12_helper.h.
pub extern "c" fn a12helper_alloc_cache(capacity: u32) ?*struct_frame_cache;
pub extern "c" fn a12helper_framecache_sink(
    S: ?*struct_a12_state,
    C: ?*struct_frame_cache,
    fd: c_int,
    opts: struct_a12helper_opts,
) void;
pub extern "c" fn a12helper_vbuffer_append_raw(
    c_: ?*struct_frame_cache,
    vb: ?*struct_shmifsrv_vbuffer,
    channel: u8,
) void;
pub extern "c" fn a12helper_vbuffer_append_encoded(
    c_: ?*struct_frame_cache,
    buf: [*]u8,
    buf_sz: usize,
    channel: u8,
    keyed: bool,
) void;
pub extern "c" fn a12helper_vbuffer_add_listener(
    c_: ?*struct_frame_cache,
    ref: usize,
    raw: bool,
    trigger: ?*const fn (ref: usize, buf: [*]u8, buf_sz: usize, typ: c_int) callconv(.c) void,
) void;
pub extern "c" fn a12helper_vbuffer_size_hints(
    c_: ?*struct_frame_cache,
    ref: usize,
    w: usize,
    h: usize,
) void;
pub extern "c" fn a12helper_tpack_dimensions(
    c_: ?*struct_frame_cache,
    chid: u8,
    rows: *usize,
    cols: *usize,
) bool;
pub extern "c" fn a12helper_vbuffer_type(c_: ?*struct_frame_cache, chid: u8) c_int;
pub extern "c" fn a12helper_vbuffer_drop_listener(c_: ?*struct_frame_cache, ref: usize) void;
pub extern "c" fn a12helper_vbuffer_step_quality(
    c_: ?*struct_frame_cache,
    ref: usize,
    steps: isize,
) void;
pub extern "c" fn a12helper_a12cl_shmifsrv(
    S: ?*struct_a12_state,
    C: ?*struct_shmifsrv_client,
    fd_in: c_int,
    fd_out: c_int,
    opts: struct_a12helper_opts,
) void;
pub extern "c" fn a12helper_listen_beacon(
    C: ?*struct_arcan_shmif_cont,
    O: ?*struct_anet_discover_opts,
    on_beacon: ?*const anyopaque,
    on_unknown: ?*const anyopaque,
    on_shmif: ?*const anyopaque,
) void;
pub extern "c" fn a12helper_build_beacon(
    head: ?*struct_keystore_mask,
    tail: ?*struct_keystore_mask,
    one: *?[*]u8,
    two: *?[*]u8,
    sz: *usize,
) ?*struct_keystore_mask;
pub extern "c" fn anet_discover_listen_beacon(cfg: *struct_anet_discover_opts) void;
pub extern "c" fn anet_discover_send_beacon(cfg: *struct_anet_discover_opts) bool;
pub extern "c" fn a12helper_discover_ipcfg(
    cfg: *struct_anet_discover_opts,
    beacon: bool,
) ?[*:0]const u8;
pub extern "c" fn a12helper_a12srv_shmifcl(
    prealloc: ?*struct_arcan_shmif_cont,
    S: ?*struct_a12_state,
    cp: ?[*:0]const u8,
    fd_in: c_int,
    fd_out: c_int,
) c_int;
pub extern "c" fn a12helper_tob64(data: [*]const u8, inl: usize, outl: *usize) ?[*]u8;
pub extern "c" fn a12helper_fromb64(instr: [*]const u8, lim: usize, outb: [*]u8) bool;
pub extern "c" fn anet_client_execargs(
    name: ?[*:0]const u8,
    meta: *struct_launcher_meta,
    manifest: ?*struct_arg_arr,
) bool;

// ══════════════════════════════════════════════════════════════════════════════
// Section 2 — anet_helper.h (keystore / connect / listen)
// ══════════════════════════════════════════════════════════════════════════════

pub const A12HELPER_PROVIDER_BASEDIR: c_int = 0;
pub const enum_a12helper_providers = c_uint;

// keystore_provider — the union is accessed as `kp.unnamed_0.directory.dirfd/statefd`
// by consumer code (matches translate-c naming).
pub const struct_keystore_provider = extern struct {
    unnamed_0: extern union {
        directory: extern struct {
            dirfd: c_int = 0,
            statefd: c_int = 0,
        },
    } = .{ .directory = .{} },
    type: c_int = 0,
};
pub const keystore_provider = struct_keystore_provider;

pub const struct_anet_options = extern struct {
    cp: ?[*:0]const u8 = null,
    host: ?[*:0]const u8 = null,
    port: ?[*:0]const u8 = null,
    key: ?[*:0]const u8 = null,
    ignore_key_host: bool = false,
    host_tag: ?[*:0]const u8 = null,
    petname: [16]u8 = std.mem.zeroes([16]u8),
    sockfd: c_int = 0,
    mt_mode: c_int = 0,
    mode: c_int = 0,
    allow_n_keys: c_int = 0,
    redirect_exit: ?[*:0]const u8 = null,
    devicehint_cp: ?[*:0]const u8 = null,
    retry_count: isize = 0,
    keystore: struct_keystore_provider = .{},
    // [*c] to match cImport-style C pointer; callers do `o.opts.*.field`.
    opts: [*c]struct_a12_context_options = null,
};
pub const anet_options = struct_anet_options;

pub const struct_anet_cl_connection = extern struct {
    fd: c_int = 0,
    state: ?*struct_a12_state = null,
    errmsg: ?[*:0]u8 = null,
    auth_failed: bool = false,
};
pub const anet_cl_connection = struct_anet_cl_connection;

// keystore_mask — linked list for build_beacon / public_tagset (WANT_KEYSTORE_HASHER).
pub const struct_keystore_mask = extern struct {
    tag: ?[*:0]u8 = null,
    pubk: [32]u8 = std.mem.zeroes([32]u8),
    next: ?*struct_keystore_mask = null,
};
pub const keystore_mask = struct_keystore_mask;

pub extern "c" fn anet_cl_setup(opts: *struct_anet_options) struct_anet_cl_connection;
pub extern "c" fn anet_connect_to(arg: *struct_anet_options) struct_anet_cl_connection;
pub extern "c" fn a12helper_keystore_open(p: *struct_keystore_provider) bool;
pub extern "c" fn a12helper_keystore_release() bool;
pub extern "c" fn a12helper_keystore_hostkey(
    petname: ?[*:0]const u8,
    index: usize,
    privk: *[32]u8,
    outhost: *?[*:0]u8,
    outport: *u16,
) bool;
pub extern "c" fn a12helper_keystore_tags(
    cb: ?*const fn (petname: ?[*:0]const u8, tag: ?*anyopaque) callconv(.c) bool,
    tag: ?*anyopaque,
) bool;
pub extern "c" fn a12helper_keystore_register(
    petname: ?[*:0]const u8,
    host: ?[*:0]const u8,
    port: u16,
    pubk: *[32]u8,
    priv: ?*[32]u8,
) bool;
pub extern "c" fn a12helper_keystore_accepted(
    pubk: *const [32]u8,
    connp: ?[*:0]const u8,
) ?[*:0]const u8;
pub extern "c" fn a12helper_keystore_known_accepted_challenge(
    pubk: *const [32]u8,
    chg: *const [8]u8,
    on_beacon: ?*const anyopaque,
    shmif: ?*struct_arcan_shmif_cont,
    errout: ?[*:0]u8,
) bool;
pub extern "c" fn a12helper_keystore_public_tagset(mask: *struct_keystore_mask) bool;
pub extern "c" fn a12helper_keystore_accept(pubk: *const [32]u8, connp: ?[*:0]const u8) bool;
pub extern "c" fn a12helper_keystore_get_sigkey(
    tag: ?[*:0]const u8,
    pubk: *[32]u8,
    privk: *[64]u8,
) bool;
pub extern "c" fn a12helper_keystore_gen_sigkey(tag: ?[*:0]const u8, overwrite: bool) bool;
pub extern "c" fn a12helper_keystore_accept_ephemeral(
    pubk: *const [32]u8,
    connp: ?[*:0]const u8,
    id: ?[*:0]const u8,
) void;
pub extern "c" fn a12helper_keystore_flush_ephemeral(id: ?[*:0]const u8) void;
pub extern "c" fn anet_clfd(addr: ?*anyopaque) c_int;
pub extern "c" fn anet_authenticate(
    S: ?*struct_a12_state,
    fdin: c_int,
    fdout: c_int,
    err: *?[*:0]u8,
) bool;
pub extern "c" fn a12helper_keystore_statestore(
    pubk: *const [32]u8,
    name: ?[*:0]const u8,
    sz: usize,
    mode: ?[*:0]const u8,
) c_int;
pub extern "c" fn a12helper_keystore_stateunlink(
    pubk: *const [32]u8,
    name: ?[*:0]const u8,
) bool;
pub extern "c" fn a12helper_keystore_enumerate(ref: *usize, pubk: *[32]u8) bool;
pub extern "c" fn a12helper_keystore_dirfd(err: *?[*:0]const u8) c_int;
pub extern "c" fn a12helper_query_untrusted_key(
    trust_domain: ?[*:0]const u8,
    kpub_b64: [*]u8,
    kpub: *const [32]u8,
    out_tag: *?[*:0]u8,
    prefix_ofs: *usize,
) bool;
pub extern "c" fn anet_listen(
    args: *struct_anet_options,
    errmsg: *?[*:0]u8,
    dispatch: ?*const fn (S: ?*struct_a12_state, fd: c_int, tag: ?*anyopaque) callconv(.c) void,
    tag: ?*anyopaque,
) bool;

// ══════════════════════════════════════════════════════════════════════════════
// Section 3 — directory.h (directory server / client types & fns)
// ══════════════════════════════════════════════════════════════════════════════

// Signature sizes.
pub const SIG_PUBK_SZ: usize = 32;
pub const SIG_PRIVK_SZ: usize = 64;
pub const SIG_VAL_SZ: usize = 64;

// monitor_mode enum.
pub const MONITOR_NONE: c_int = 0;
pub const MONITOR_SIMPLE: c_int = 1;
pub const MONITOR_DEBUGGER: c_int = 2;
pub const MONITOR_ADMIN: c_int = 3;
pub const enum_monitor_mode = c_uint;

// link-type enum used by anet_directory_shmifsrv_thread.
pub const DIRLINK_NONE: c_int = 0;
pub const DIRLINK_UNIFIED: c_int = 1;
pub const DIRLINK_REFERENCE: c_int = 2;
pub const DIRLINK_RESOLVER: c_int = 3;

// revert / step dmask bits.
pub const REVERT_STEP_CTRL: c_int = 1;
pub const REVERT_STEP_APPL: c_int = 2;

// BREQ_LOAD / BREQ_STORE — booleans used as enum tags.
pub const BREQ_LOAD: c_int = 0;
pub const BREQ_STORE: c_int = 1;

// dirlua event kinds.
pub const DIRLUA_EVENT_LOST: c_int = 0;

// Entrypoint indices — mirrors dir_lua_support.h EP_TRIGGER_* enum.
pub const EP_TRIGGER_NONE: c_int = 0;
pub const EP_TRIGGER_MAIN: c_int = 1;
pub const EP_TRIGGER_CLOCK: c_int = 2;
pub const EP_TRIGGER_MESSAGE: c_int = 3;
pub const EP_TRIGGER_NBIO_RD: c_int = 4;
pub const EP_TRIGGER_NBIO_WR: c_int = 5;
pub const EP_TRIGGER_NBIO_DATA: c_int = 6;
pub const EP_TRIGGER_TRACE: c_int = 7;
pub const EP_TRIGGER_RESET: c_int = 8;
pub const EP_TRIGGER_JOIN: c_int = 9;
pub const EP_TRIGGER_LEAVE: c_int = 10;
pub const EP_TRIGGER_INDEX: c_int = 11;
pub const EP_TRIGGER_LOAD: c_int = 12;
pub const EP_TRIGGER_STORE: c_int = 13;
pub const EP_TRIGGER_LIMIT: c_int = 14;

// multipart merge errors.
pub const MULTIPART_OOM: c_int = 1;
pub const MULTIPART_BAD_FMT: c_int = 2;
pub const MULTIPART_BAD_MSG: c_int = 3;
pub const MULTIPART_BAD_EVENT: c_int = 4;
pub const enum_multipart_fail = c_uint;

// anet_dirsrv_opts — filled by main/config.lua, passed by value in
// anet_directory_srv and by pointer in most other call sites.
pub const struct_anet_dirsrv_opts = extern struct {
    a12_cfg: ?*struct_a12_context_options = null,
    basedir: c_int = 0,
    dir: struct_appl_meta = .{},
    dir_count: usize = 0,

    allow_tunnel: bool = false,
    discover_beacon: bool = false,
    runner_process: bool = false,
    flush_on_report: bool = false,

    allow_src: ?[*:0]u8 = null,
    allow_dir: ?[*:0]u8 = null,
    allow_appl: ?[*:0]u8 = null,
    allow_ctrl: ?[*:0]u8 = null,
    allow_ares: ?[*:0]u8 = null,
    allow_admin: ?[*:0]u8 = null,
    allow_monitor: ?[*:0]u8 = null,
    allow_applhost: ?[*:0]u8 = null,
    allow_install: ?[*:0]u8 = null,
    allow_reference: ?[*:0]u8 = null,

    resource_path: ?[*:0]u8 = null,
    resource_dfd: c_int = 0,

    appl_server_path: ?[*:0]u8 = null,
    appl_server_dfd: c_int = 0,

    appl_server_datapath: ?[*:0]u8 = null,
    appl_server_datadfd: c_int = 0,

    appl_logpath: ?[*:0]u8 = null,
    applhost_path: ?[*:0]u8 = null,

    appl_server_temp_path: ?[*:0]u8 = null,
    appl_server_temp_dfd: c_int = 0,

    appl_logdfd: c_int = 0,
};
pub const anet_dirsrv_opts = struct_anet_dirsrv_opts;

// source_meta — embedded array inside struct runner_state.
pub const struct_source_meta = extern struct {
    pubk: [32]u8 = std.mem.zeroes([32]u8),
    force_ident: [16]u8 = std.mem.zeroes([16]u8),
    ref_id: usize = 0,
};
pub const source_meta = struct_source_meta;

pub const struct_runner_state = extern struct {
    lock: pthread_mutex_t = .{},
    cl: ?*struct_shmifsrv_client = null,
    resolver: ?*struct_dircl = null,
    appl: ?*struct_appl_meta = null,
    alive: bool = false,
    appl_sent: bool = false,
    store_dfd: c_int = 0,
    pending_sources: [8]struct_source_meta = std.mem.zeroes([8]struct_source_meta),
};
pub const runner_state = struct_runner_state;

// dircl_nameent — used inline in anet_dircl_opts for dpath/upload/download.
pub const struct_dircl_nameent = extern struct {
    name: ?[*:0]u8 = null,
    path: ?[*:0]u8 = null,
    srvname: [16]u8 = std.mem.zeroes([16]u8),
    next: ?*struct_dircl_nameent = null,
};
pub const dircl_nameent = struct_dircl_nameent;

// anet_dircl_opts — passed by value to anet_directory_cl; heavy field usage.
pub const struct_anet_dircl_opts = extern struct {
    last_connection: struct_anet_options = .{},

    basedir: c_int = 0,
    basedir_path: [PATH_MAX]u8 = std.mem.zeroes([PATH_MAX]u8),

    dpath: struct_dircl_nameent = .{},
